--- a/workspace/GTAcalC/res/layout/activity_gtacal_c.xml
+++ b/workspace/GTAcalC/res/layout/activity_gtacal_c.xml
@@ -1,23 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="fill"
+ 
      >
 
     <Button
-        android:id="@+id/num3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/num6"
-        android:layout_below="@+id/result"
-        android:layout_marginTop="16dp"
-        
-        android:text="3" />
-
-    <Button
         android:id="@+id/num6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:background="@drawable/button"
         android:layout_alignBaseline="@+id/num5"
         android:layout_alignBottom="@+id/num5"
         android:layout_alignLeft="@+id/num9"
@@ -26,31 +17,13 @@
 
     <Button
         android:id="@+id/num0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:background="@drawable/button"
         android:layout_alignBaseline="@+id/clear"
         android:layout_alignBottom="@+id/clear"
         android:layout_centerHorizontal="true"
         android:text="0" />
-
-    <Button
-        android:id="@+id/num2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/num3"
-        android:layout_alignBottom="@+id/num3"
-        android:layout_alignLeft="@+id/num5"
-        android:text="2" />
-
-    <Button
-        android:id="@+id/num1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/num2"
-        android:layout_alignBottom="@+id/num2"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="14dp"
-        android:text="1" />
 
     <Button
         android:id="@+id/equal"
@@ -61,102 +34,43 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="14dp"
         android:background="@drawable/rect"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="=" />
 
     <TextView
-        android:id="@+id/result"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/num1"
         android:layout_alignRight="@+id/num3"
+        android:layout_alignParentTop="true"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/num5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/num4"
-        android:layout_alignBottom="@+id/num4"
-        android:layout_alignLeft="@+id/num0"
-        android:text="5" />
-
-    <Button
-        android:id="@+id/num8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/num7"
-        android:layout_alignBottom="@+id/num7"
-        android:layout_alignLeft="@+id/num5"
-        android:text="8" />
-
-    <Button
-        android:id="@+id/num4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/num1"
-        android:layout_below="@+id/num1"
-        android:text="4" />
-
-    <Button
-        android:id="@+id/num7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/num4"
-        android:layout_below="@+id/num4"
-        android:text="7" />
-
-    <Button
-        android:id="@+id/clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/num7"
-        android:layout_below="@+id/num7"
-        android:background="@drawable/rect"
-        android:text="AC" />
-
-    
-
-    <Button
-        android:id="@+id/num9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/equal"
-        android:layout_alignLeft="@+id/equal"
-        android:text="9" />
 
     <Button
         android:id="@+id/add"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="285dp"
-        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/clear"
+        android:layout_marginTop="20dp"
+        android:layout_alignLeft="@+id/clear"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="+" />
-    
-    
-
-   
-    
-    <Button
-        android:id="@+id/div"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="285dp"
-       android:background="@drawable/myshape"
-        android:layout_alignRight="@+id/num6"
-        android:text="/" />
 
     <Button
         android:id="@+id/decimal"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/add"
-        android:layout_alignTop="@+id/exp"
+        android:layout_alignBaseline="@+id/gcd"
+        android:layout_alignLeft="@+id/clear"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text=".  ," />
 
     <Button
@@ -164,10 +78,12 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/sqrt"
-        android:layout_alignBottom="@+id/sqrt"
+        android:layout_alignBaseline="@+id/gcd"
+        android:layout_alignBottom="@+id/gcd"
         android:layout_alignLeft="@+id/sub"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
          android:text="^" />
 
     <Button
@@ -180,6 +96,8 @@
         android:layout_marginRight="18dp"
         android:layout_toLeftOf="@+id/equal"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="*" />
 
     <Button
@@ -192,6 +110,8 @@
         android:layout_marginLeft="18dp"
         android:layout_toRightOf="@+id/clear"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="-" />
 
     <Button
@@ -200,8 +120,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:layout_alignRight="@+id/div"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:background="@drawable/myshape"
         android:text="GCD" />
 
@@ -214,6 +136,111 @@
         android:layout_alignBottom="@+id/gcd"
         android:layout_alignLeft="@+id/mul"
         android:background="@drawable/myshape"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="√" />
+
+    <Button
+        android:id="@+id/div"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/equal"
+        android:background="@drawable/myshape"
+        android:layout_below="@+id/equal"
+        android:layout_marginTop="20dp"
+        android:text="/"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/num9"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/num8"
+        android:layout_alignBottom="@+id/num8"
+        android:layout_alignRight="@+id/equal"
+        android:background="@drawable/button"
+        android:text="9" />
+
+    <Button
+        android:id="@+id/num7"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/num4"
+        android:layout_alignLeft="@+id/clear"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button"
+        android:text="7" />
+
+    <Button
+        android:id="@+id/num1"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/clear"
+        android:layout_below="@+id/text"
+        android:background="@drawable/button"
+        android:text="1" />
+
+    <Button
+        android:id="@+id/num2"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/num5"
+        android:layout_below="@+id/text"
+        android:background="@drawable/button"
+        android:text="2" />
+
+    <Button
+        android:id="@+id/num3"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/num2"
+        android:layout_alignBottom="@+id/num2"
+        android:layout_alignLeft="@+id/num6"
+        android:background="@drawable/button"
+        android:text="3" />
+
+    <Button
+        android:id="@+id/num4"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/clear"
+        android:layout_below="@+id/num1"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button"
+        android:text="4" />
+
+    <Button
+        android:id="@+id/num5"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/num4"
+        android:layout_alignBottom="@+id/num4"
+        android:layout_alignLeft="@+id/num0"
+        android:background="@drawable/button"
+        android:text="5" />
+
+    <Button
+        android:id="@+id/num8"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/num7"
+        android:layout_alignBottom="@+id/num7"
+        android:layout_alignLeft="@+id/num5"
+        android:background="@drawable/button"
+        android:text="8" />
+
+    <Button
+        android:id="@+id/clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_below="@+id/num7"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rect"
+        android:text="AC"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
 
  </RelativeLayout>
