--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -1,41 +1,69 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".CampusActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CampusActivity" >
+    android:layout_height="match_parent">
+    
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="274dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
+        
+         <AnalogClock
+        android:id="@+id/analogClock1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
+        
+         <ImageButton
+             android:id="@+id/imageButton1"
+             android:layout_width="70dp"
+             android:layout_height="wrap_content"
+             android:layout_alignTop="@id/analogClock1"
+             android:layout_marginLeft="15dp"
+             android:onClick="Calculator"
+             android:src="@drawable/ic_action_name" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton1"
-        android:layout_alignRight="@+id/imageButton1"
-        android:layout_below="@+id/imageButton1"
+        android:layout_alignLeft="@id/imageButton1"
+        android:layout_below="@id/imageButton1"
         android:text="Calculator"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/imageButton1"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@id/imageButton1"
+        android:onClick="slotdisp"
+        android:src="@drawable/slot" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_below="@+id/imageButton2"
+        android:layout_alignLeft="@id/imageButton2"
+        android:layout_below="@id/imageButton2"
         android:layout_marginLeft="15dp"
         android:text="Slots"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-
+    
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="42dp"
+        android:layout_below="@id/imageButton1"
+        android:layout_alignLeft="@id/imageButton1"
+        android:layout_marginTop="60dp"
         android:onClick="coursefn"
         android:src="@drawable/ic_slot" />
 
@@ -43,93 +71,77 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton3"
-        android:layout_below="@+id/imageButton3"
+        android:layout_alignLeft="@id/imageButton3"
+        android:layout_below="@id/imageButton3"
+      
         android:text="Add Course"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    
+     <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/imageButton2"
+        android:layout_below="@id/imageButton2"
+        android:layout_marginTop="45dp"
+        android:onClick="coursecheck"
+        android:src="@drawable/course" />
+     
+     
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imageButton2"
-        android:layout_below="@+id/imageButton4"
+        android:layout_alignRight="@id/imageButton4"
+        android:layout_below="@id/imageButton4"
         android:text="Courses"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+    
 
-    <ImageButton
+    
+     <ImageButton
         android:id="@+id/imageButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="48dp"
+        android:layout_below="@id/imageButton3"
+        android:layout_alignLeft="@id/imageButton1"
+        android:layout_marginTop="60dp"
         android:onClick="notes"
         android:src="@drawable/ic_note" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageButton1"
-        android:layout_marginRight="22dp"
-        android:layout_toLeftOf="@+id/analogClock1"
-        android:onClick="slotdisp"
-        android:src="@drawable/slot" />
-
-    <TextView
+     
+         <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imageButton3"
-        android:layout_below="@+id/imageButton5"
-        android:layout_marginRight="14dp"
+        android:layout_alignLeft="@id/imageButton1"
+        android:layout_below="@id/imageButton5"
+        android:layout_marginLeft="14dp"
         android:text="Notes"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <AnalogClock
-        android:id="@+id/analogClock1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-
-    <ImageButton
-        android:id="@+id/imageButton1"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/analogClock1"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="29dp"
-        android:onClick="Calculator"
-        android:src="@drawable/ic_action_name" />
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_alignTop="@+id/imageButton3"
-        android:onClick="coursecheck"
-        android:src="@drawable/course" />
-
-    <ImageButton
+      
+    
+    
+     <ImageButton
         android:id="@+id/imageButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView5"
-        android:layout_alignRight="@+id/imageButton4"
+        android:layout_alignLeft="@id/imageButton2"
+        android:layout_below="@id/imageButton4"
+        android:layout_marginTop="50dp"
         android:onClick="bunk"
         android:src="@drawable/ic_bunk" />
-
-    <TextView
+     
+     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton6"
-        android:layout_below="@+id/imageButton6"
+        android:layout_alignLeft="@+id/imageButton2"
+		android:layout_below="@id/imageButton6"
         android:text="Bunk-O-meter"
-        
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-</RelativeLayout>
+    
+
+</RelativeLayout></ScrollView>
