--- a/workspace/GTAcampuS/res/layout/addnotes.xml
+++ b/workspace/GTAcampuS/res/layout/addnotes.xml
@@ -51,9 +51,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText2"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="47dp"
         android:onClick="save"
         android:text="Save" />
 
