--- a/workspace/GTAcampuS/res/layout/notes.xml
+++ b/workspace/GTAcampuS/res/layout/notes.xml
@@ -17,9 +17,9 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/list"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="22dp"
         android:onClick="add"
         android:text="ADD NOTE" />
 
