--- a/workspace/GTAcampuS/res/layout/slots.xml
+++ b/workspace/GTAcampuS/res/layout/slots.xml
@@ -1,11 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     tools:context=".Slot" >
+    
+<HorizontalScrollView android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
  <TableLayout
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:background="#7000" 
     android:gravity="center_horizontal"
@@ -238,4 +241,4 @@
          android:text="FRI                                                                             -                                                                                T" />
 
     </TableRow>
-</TableLayout></ScrollView>
+</TableLayout></HorizontalScrollView></ScrollView>
