--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -1,12 +1,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".CampusActivity"
+    android:animateLayoutChanges="true"
+    android:background="#333"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="fill_parent">
     
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="274dp"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,11 +24,11 @@
          <ImageButton
              android:id="@+id/imageButton1"
              android:layout_width="70dp"
-             android:layout_height="wrap_content"
+             android:layout_height="70dp"
              android:layout_alignTop="@id/analogClock1"
              android:layout_marginLeft="15dp"
              android:onClick="Calculator"
-             android:src="@drawable/ic_action_name" />
+             android:src="@drawable/calculator_icon" />
 
     <TextView
         android:id="@+id/textView1"
@@ -34,13 +36,15 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/imageButton1"
         android:layout_below="@id/imageButton1"
+
+        android:textColor="#FFF"
         android:text="Calculator"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignTop="@id/imageButton1"
         android:layout_marginLeft="50dp"
         android:layout_toRightOf="@id/imageButton1"
@@ -52,15 +56,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/imageButton2"
+        android:layout_marginLeft="16dp"
         android:layout_below="@id/imageButton2"
-        android:layout_marginLeft="15dp"
+       android:textColor="#FFF"
         android:text="Slots"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_below="@id/imageButton1"
         android:layout_alignLeft="@id/imageButton1"
         android:layout_marginTop="60dp"
@@ -73,7 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/imageButton3"
         android:layout_below="@id/imageButton3"
-      
+ 
+      android:textColor="#FFF"
         android:text="Add Course"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -81,10 +87,10 @@
      <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="70dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignLeft="@id/imageButton2"
         android:layout_below="@id/imageButton2"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="60dp"
         android:onClick="coursecheck"
         android:src="@drawable/course" />
      
@@ -93,8 +99,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@id/imageButton4"
+        android:layout_alignLeft="@id/imageButton4"
         android:layout_below="@id/imageButton4"
+        android:layout_marginLeft="10dp"
+        android:textColor="#FFF"
         android:text="Courses"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
@@ -102,8 +110,8 @@
     
      <ImageButton
         android:id="@+id/imageButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_below="@id/imageButton3"
         android:layout_alignLeft="@id/imageButton1"
         android:layout_marginTop="60dp"
@@ -117,6 +125,7 @@
         android:layout_alignLeft="@id/imageButton1"
         android:layout_below="@id/imageButton5"
         android:layout_marginLeft="14dp"
+        android:textColor="#FFF"
         android:text="Notes"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -125,11 +134,11 @@
     
      <ImageButton
         android:id="@+id/imageButton6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignLeft="@id/imageButton2"
         android:layout_below="@id/imageButton4"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         android:onClick="bunk"
         android:src="@drawable/ic_bunk" />
      
@@ -138,10 +147,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageButton2"
+        android:layout_marginLeft="-6dp"
 		android:layout_below="@id/imageButton6"
+		android:textColor="#FFF"
         android:text="Bunk-O-meter"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    
 
 </RelativeLayout></ScrollView>
