--- a/workspace/GTAcampuS/res/layout/slots.xml
+++ b/workspace/GTAcampuS/res/layout/slots.xml
@@ -1,11 +1,12 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    
+    android:fillViewport="true"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     tools:context=".Slot" >
     
 <HorizontalScrollView android:layout_width="fill_parent"
+    android:fillViewport="true"
     android:layout_height="fill_parent" >
  <TableLayout
     android:layout_width="match_parent"
@@ -91,7 +92,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:text="TUE                      B                       G                         E                        C                       A+                        F+                       H" />
+        android:text="TUE                      B                      G                         E                         C                       A+                        F+                       H" />
 
     </TableRow>
     
@@ -105,7 +106,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:text="WED                     C                       A                          F                       D                       H                          G+                      E@" />
+        android:text="WED                     C                      A                          F                        D                       H                          G+                      E@" />
 
     </TableRow>
     
@@ -119,7 +120,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:text="THU                     D                       B                          G                        E                        -                          C+                      G@" />
+        android:text="THU                     D                       B                         G                        E                        -                          C+                      G@" />
 
     </TableRow>
     
@@ -133,7 +134,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:text="FRI                       E                        C                         A                         F                       H+                      B+                       D+" />
+        android:text="FRI                        E                       C                         A                         F                       H+                      B+                       D+" />
 
     </TableRow>
     
